custom UI (rotate loading)

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,9 +28,10 @@
         app:layout_constraintTop_toBottomOf="@id/githubMark"
         android:contentDescription="@string/app_name" />
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.victor.loading.rotate.RotateLoading
+        android:id="@+id/progress"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:layout_constraintTop_toBottomOf="@id/githubText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
