--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -68,10 +68,9 @@
                 android:id="@+id/detail_locationCity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{data.location}"
+                android:text="@{data.location!=null? data.location : @string/location_not_found}"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
-                android:visibility="@{data.location!=null? View.VISIBLE : View.GONE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/detail_type"
