--- a/app/src/main/res/layout/item_list_user.xml
+++ b/app/src/main/res/layout/item_list_user.xml
@@ -4,6 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="6dp"
+    app:cardCornerRadius="10dp"
     android:layout_margin="8dp"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">
@@ -26,24 +28,15 @@
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="16dp"
             tools:text="Username"
             android:textColor="@android:color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/iv_imgUser"
-            app:layout_constraintTop_toTopOf="@+id/iv_imgUser"/>
+            app:layout_constraintTop_toTopOf="@+id/iv_imgUser"
+            app:layout_constraintBottom_toBottomOf="@id/iv_imgUser"/>
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            tools:text="Name"
-            app:layout_constraintStart_toStartOf="@+id/tv_username"
-            app:layout_constraintTop_toBottomOf="@id/tv_username"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
 
