--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -8,4 +8,10 @@
         android:icon="@drawable/ic_language"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/menu_favorite"
+        android:title="@string/favorite"
+        android:icon="@drawable/ic_favorite_black"
+        app:showAsAction="ifRoom"/>
+
 </menu>
