--- a/app/src/main/res/layout/item_list_user.xml
+++ b/app/src/main/res/layout/item_list_user.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             tools:text="Username"
-            android:textColor="@android:color/black"
+            android:textColor="?android:textColorPrimary"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/iv_imgUser"
             app:layout_constraintTop_toTopOf="@+id/iv_imgUser"
