--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,41 +10,41 @@
         android:id="@+id/iv_detail_avatar"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:contentDescription="@string/app_name"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/app_name"
         app:layout_constraintEnd_toStartOf="@id/tv_detail_repos"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@mipmap/ic_launcher_github"/>
+        tools:srcCompat="@mipmap/ic_launcher_github" />
 
     <!--Public Repos Configurations-->
     <TextView
         android:id="@+id/tv_detail_repos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="18dp"
-        android:text="@string/repository"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
+        android:text="@string/repository"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@id/tv_detail_followers"
         app:layout_constraintStart_toEndOf="@id/iv_detail_avatar"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfRepos"
-        app:layout_constraintEnd_toStartOf="@id/tv_detail_followers"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfRepos" />
 
     <TextView
         android:id="@+id/tv_detail_numberOfRepos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textColor="?android:textColorPrimary"
         android:textSize="20sp"
-        android:textColor="@android:color/black"
         android:textStyle="bold"
-        tools:text="0"
+        app:layout_constraintEnd_toEndOf="@id/tv_detail_repos"
         app:layout_constraintStart_toStartOf="@id/tv_detail_repos"
         app:layout_constraintTop_toTopOf="@id/iv_detail_avatar"
-        app:layout_constraintEnd_toEndOf="@id/tv_detail_repos"/>
+        tools:text="0" />
     <!--Public Repos Configurations End-->
 
     <!-- Followers Configurations-->
@@ -53,28 +52,28 @@
         android:id="@+id/tv_detail_followers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="18dp"
-        android:text="@string/followers"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
+        android:text="@string/followers"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@id/tv_detail_following"
         app:layout_constraintStart_toEndOf="@id/tv_detail_repos"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfFollowers"
-        app:layout_constraintEnd_toStartOf="@id/tv_detail_following"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfFollowers" />
 
     <TextView
         android:id="@+id/tv_detail_numberOfFollowers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:fontFamily="sans-serif-condensed"
-        tools:text="1"
-        app:layout_constraintTop_toTopOf="@id/tv_detail_numberOfRepos"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/tv_detail_followers"
         app:layout_constraintStart_toStartOf="@id/tv_detail_followers"
-        app:layout_constraintEnd_toEndOf="@id/tv_detail_followers"/>
+        app:layout_constraintTop_toTopOf="@id/tv_detail_numberOfRepos"
+        tools:text="1" />
     <!-- Followers Configurations End-->
 
     <!-- Following Configurations-->
@@ -85,19 +84,19 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/following"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
         android:fontFamily="sans-serif-condensed"
-        app:layout_constraintStart_toEndOf="@id/tv_detail_followers"
+        android:text="@string/following"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfFollowing"/>
+        app:layout_constraintStart_toEndOf="@id/tv_detail_followers"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfFollowing" />
 
     <TextView
         android:id="@+id/tv_detail_numberOfFollowing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/tv_detail_following"
@@ -109,11 +108,11 @@
 
     <TextView
         android:id="@+id/tv_detail_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="21dp"
         android:layout_marginTop="14dp"
         android:fontFamily="sans-serif-condensed"
-        android:textColor="@android:color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/iv_detail_avatar"
@@ -125,51 +124,52 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:textColor="?android:textColorPrimary"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
         app:layout_constraintStart_toStartOf="@id/tv_detail_name"
-        tools:text="@string/company"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
+        tools:text="@string/company" />
 
     <TextView
         android:id="@+id/tv_detail_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
         android:layout_marginTop="4dp"
+        android:textColor="?android:textColorPrimary"
         android:textSize="14sp"
+        app:drawableStartCompat="@drawable/ic_location_city"
         app:layout_constraintStart_toStartOf="@id/tv_detail_company"
         app:layout_constraintTop_toBottomOf="@id/tv_detail_company"
-        tools:text="@string/location"
-        app:drawableStartCompat="@drawable/ic_location_city" />
+        tools:text="@string/location" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:tabTextColor="@android:color/darker_gray"
-        app:tabSelectedTextColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_location"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_location"
+        app:tabSelectedTextColor="?android:textColorPrimary"
+        app:tabTextColor="@android:color/darker_gray" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabs"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabs" />
 
     <ImageView
         android:id="@+id/iv_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_unfavorite"
         app:layout_constraintBottom_toTopOf="@id/tabs"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
