--- a/app/src/main/res/layout/follower_fragment.xml
+++ b/app/src/main/res/layout/follower_fragment.xml
@@ -28,8 +28,8 @@
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         android:textSize="18sp"
-        android:textColor="@color/black"
         android:gravity="center"
+        android:textColor="?android:textColorPrimary"
         android:text="@string/search_message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
