--- a/app/src/main/res/layout/include_main_search.xml
+++ b/app/src/main/res/layout/include_main_search.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         android:textSize="18sp"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:gravity="center"
         android:text="@string/search_message"
         app:layout_constraintStart_toStartOf="@id/iv_search_icon"
